<resources>
    <string name="app_name">Friendzone</string>
    <string name="title_activity_main">Friendzone</string>
    <string name="action_sign_in_short">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="minimum_password">Password is too short, please enter a minimum 6 characters.</string>
    <string name="auth_failed">Authentication failed, check your email and password, or sign up!</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="remove_user">Remove User</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Friendzone</string>
    <string name="title_activity_login">Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">No account? Register with Friendzone now!</string>
    <string name="btn_link_to_login">Already registered? Log in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Enter</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_add">Add</string>
    <string name="btn_change">Change</string>
    <string name="btn_search">Search</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot your password?</string>
    <string name="forgot_password_msg">Please enter your registered email so we can send you password reset instructions.</string>
    <string name="tab_text_1">Friends</string>
    <string name="tab_text_2">Dashboard</string>
    <string name="tab_text_3">Feed</string>
    <string name="action_settings">Settings</string>
    <string name="search_by_email">Search by email</string>
    <string-array name="times_array">
        <item>30 min</item>
        <item>40 min</item>
        <item>50 min</item>
        <item>1 hr</item>
        <item>1.5 hrs</item>
        <item>2 hrs</item>
        <item>2 hrs +</item>
    </string-array>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
</resources>
